--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/migvillabato/connectin-server-mock#readme",
   "dependencies": {
+    "eslint": "^5.14.1",
     "express": "^4.16.4"
   },
   "engines": {
